apps/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
spec:
  selector:
    app.kubernetes.io/name: gatus
  ports:
    - name: http
      port: 80
      targetPort: http
